--- a/src/app/paginas/pedidos/lista-pedidos/lista-pedidos/lista-pedidos.page.html
+++ b/src/app/paginas/pedidos/lista-pedidos/lista-pedidos/lista-pedidos.page.html
@@ -24,7 +24,7 @@
       </ion-row>
       <ion-row>
         <ion-col>
-          <ion-button (click)="Consultar()" expand="block">Consultar</ion-button>
+          <ion-button    (click)=" Consultar() " expand="block">Consultar</ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
@@ -74,6 +74,13 @@
     </ion-item-sliding>
   </ion-list>
 </ion-content>
+<ion-fab vertical="bottom" horizontal="end" slot="fixed" class="custom-fab">
+  <ion-fab-button type="submit" (click)=" OpenEditPedido(0)">
+    <ion-icon name="add"></ion-icon>
+  </ion-fab-button>
+</ion-fab>
+
+
 <ion-footer>
   <ion-grid>
     <ion-row>
