--- a/src/global.scss
+++ b/src/global.scss
@@ -40,3 +40,6 @@
 ion-content { font-size: 16px; } 
 ion-header { font-size: 18px; }
 ion-button { font-size: 14px; }
+ion-label  { font-size: 14px; }
+ion-input  { font-size: 12px; }
+
