--- a/src/app/paginas/clientes/clientes/clientes.page.html
+++ b/src/app/paginas/clientes/clientes/clientes.page.html
@@ -8,7 +8,7 @@
     <ion-title class="ion-text-center">Lista de Clientes</ion-title>
   </ion-toolbar>
   <ion-toolbar>
-    <ion-searchbar (ionChange)="buscar($event)"> </ion-searchbar>
+    <ion-searchbar (ionInput)="buscar($event)"> </ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
