--- a/src/app/paginas/pedidos/detalle-pedido/detalle-pedido/detalle-pedido.page.html
+++ b/src/app/paginas/pedidos/detalle-pedido/detalle-pedido/detalle-pedido.page.html
@@ -10,7 +10,7 @@
 <ion-content class="ion-padding">
   <ion-card>
     <ion-card-header>
-      <ion-card-title  class="ion-text-center custom-title">Información del Pedido</ion-card-title>
+      <ion-card-title class="ion-text-center custom-title">Información del Pedido</ion-card-title>
     </ion-card-header>
     <ion-card-content>
       <ion-grid>
@@ -40,7 +40,7 @@
             <ion-label>Cliente</ion-label>
           </ion-col>
           <ion-col size="4" class="ion-align-self-center">
-            <ion-input [(ngModel)]="pedido.cliente" (ionBlur)="ValidarCliente()" class="align-right"></ion-input>
+            <ion-input [(ngModel)]="pedido.cliente" class="align-right"></ion-input>
           </ion-col>
           <ion-col size="5" class="ion-align-self-center">
             <ion-button expand="full" color="primary" (click)="ValidarCliente()">Buscar</ion-button>
@@ -97,7 +97,7 @@
           <ion-row>
             <!-- Columna para el subtotal -->
             <ion-col size="6">
-              <p><strong>Subtotal :</strong> {{ (detalle.precio * detalle.cantidad) |  number:'1.0-0' }}</p>
+              <p><strong>Subtotal :</strong> {{ (detalle.precio * detalle.cantidad) | number:'1.0-0' }}</p>
             </ion-col>
           </ion-row>
         </ion-grid>
@@ -110,21 +110,25 @@
       </ion-item-sliding>
 
       <!-- Formulario de selección y edición del producto -->
-      <ion-item>
-        <ion-label>Código Producto</ion-label>
-        <ion-select [(ngModel)]="codigoProductoSeleccionado" interface="popover" (ionChange)="seleccionarProducto()">
-          <ion-select-option *ngFor="let producto of productos" [value]="producto.codprod">{{ producto.codprod
-            }}</ion-select-option>
-        </ion-select>
-      </ion-item>
+      <ion-row>
+        <ion-col size="3" class="ion-align-self-center">
+          <ion-label>Código</ion-label>
+        </ion-col>
 
-      <ion-item>
-        <ion-row>
-          <ion-col size="8">
-            <ion-input [(ngModel)]="productoSeleccionado.descripcion" readonly></ion-input>
-          </ion-col>
-        </ion-row>
-      </ion-item>
+        <ion-col size="4" class="ion-align-self-center">
+          <ion-input [(ngModel)]="codigoProductoSeleccionado" class="align-right"></ion-input>
+        </ion-col>
+
+        <ion-col size="5" class="ion-align-self-center">
+          <ion-button expand="full" color="primary" (click)="ValidarProducto()">Buscar</ion-button>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col size="12">
+          <h1 class="cliente-nombre">{{ productoSeleccionado.descripcion }}</h1>
+        </ion-col>
+      </ion-row>
 
       <ion-item>
         <ion-row>
@@ -158,7 +162,7 @@
       <ion-col size="6" class="total-label">
         <div><strong>Total</strong></div>
       </ion-col>
-  
+
       <!-- Columna para el valor del total con separador de miles -->
       <ion-col size="6" class="total-value ion-text-right">
         <ion-input [value]="totalPedido() | number:'1.0-0'" readonly></ion-input>
@@ -179,7 +183,7 @@
           Guardar
         </ion-button>
       </ion-col>
-  
+
       <!-- Botón para regresar -->
       <ion-col size="6">
         <ion-button expand="full" color="danger" (click)="dismiss()">
