--- a/src/app/paginas/usuarios/usuarios.page.html
+++ b/src/app/paginas/usuarios/usuarios.page.html
@@ -1,30 +1,30 @@
 <ion-content class="ion-padding ion-text-center" color="secundary">
   <form>
-  <img src="../../../assets/img/logo.png" class="logo" />
-  <div class="container">
-    <ion-grid>
-      <ion-row justify-content-center>
-        <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
-          <div padding class="item-content">
-            <ion-item>
-              <ion-icon name="person" color="primary"></ion-icon>
-              <ion-input type="text" name="loginacceso" placeholder="Usuario" [(ngModel)]="loginacceso"></ion-input>
-            </ion-item>
-            <ion-item>
-              <ion-icon name="eye-off" color="primary"></ion-icon>
-              <ion-input type="password" placeholder="Password" name="password" [(ngModel)]="password"></ion-input>
-            </ion-item>
-          </div>
-          <div padding class="item-content">
-            <ion-button expand="block" color="primary" type="submit" (click)="Ingresar()">Ingresar</ion-button>
-          </div>
-          <div class="ion-margin-top ion-text-center">
-            <a (click)="dismiss()">Salir</a>
-          </div>
+    <img src="../../../assets/img/logo.png" class="logo" />
+    <div class="container">
+      <ion-grid>
+        <ion-row justify-content-center>
+          <ion-col align-self-center size-xs="12" size-sm="10" size-md="8" size-lg="6">
+            <div padding class="item-content">
+              <ion-item>
+                <ion-icon name="person" color="primary"></ion-icon>
+                <ion-input type="text" name="loginacceso" placeholder="Usuario" [(ngModel)]="loginacceso"></ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-icon name="eye-off" color="primary"></ion-icon>
+                <ion-input type="password" placeholder="Password" name="password" [(ngModel)]="password"></ion-input>
+              </ion-item>
+            </div>
+            <div padding class="item-content">
+              <ion-button expand="block" color="primary" type="submit" (click)="Ingresar()">Ingresar</ion-button>
+            </div>
+            <div class="ion-margin-top ion-text-center">
+              <a (click)="dismiss()">Salir</a>
+            </div>
 
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  </div>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </div>
   </form>
 </ion-content>
