--- a/src/app/paginas/clientes/clientes/clientes.page.html
+++ b/src/app/paginas/clientes/clientes/clientes.page.html
@@ -1,68 +1,75 @@
 <ion-header>
   <ion-toolbar color="primary">
-
     <ion-buttons slot="start">
-      <ion-icon name="arrow-back"  (click)="goBack()"></ion-icon>
+      <ion-button fill="clear" (click)="goBack()">
+        <ion-icon name="arrow-back" slot="icon-only"></ion-icon>
+      </ion-button>
     </ion-buttons>
-
-    <ion-title class="ion-text-center">Lista de Clientes</ion-title>
+    <ion-title>Lista de Clientes</ion-title>
   </ion-toolbar>
-  <ion-toolbar>
-    <ion-searchbar (ionInput)="buscar($event)"> </ion-searchbar>
+
+  <ion-toolbar color="light">
+    <ion-searchbar
+      placeholder="Buscar cliente..."
+      (ionInput)="buscar($event)"
+      animated
+      color="primary">
+    </ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-list>
-    <ion-item-sliding *ngFor="let datos of clientes | filtro:textoBuscar:'nombre'" (click)="openEditClienteModal(datos.codigo)">   
-      <ion-card>
-        <ion-card-subtitle>{{datos.nombre}}</ion-card-subtitle>
-        <div class="contenido">
-          <ion-grid>
-            <ion-row>
-              <ion-col class="ion-margin">
-                <div><strong>Cuenta</strong></div>
-              </ion-col>
-              <ion-col class="ion-margin">
-                <div>{{datos.codigo}}</div>
-              </ion-col>
-            </ion-row>
-            <ion-row>
-              <ion-col class="ion-margin">
-                <div><strong>RUC</strong></div>
-              </ion-col>
-              <ion-col class="ion-margin">
-                <div>{{datos.ruc}}</div>
-              </ion-col>
-            </ion-row>
-          </ion-grid>
-        </div>
-        <ion-icon name="person" class="icono-superior-derecho"></ion-icon>
-      </ion-card>
-    </ion-item-sliding>
+<ion-content [fullscreen]="true">
+  <ion-list lines="none" class="lista-clientes">
+    <ion-card *ngFor="let datos of clientes | filtro:textoBuscar:'nombre'" (click)="openEditClienteModal(datos.codigo)" class="card-cliente ion-margin">
+      <ion-card-header class="cliente-card">
+        <ion-card-title class="ion-text-capitalize">{{ datos.nombre }}</ion-card-title>
+      </ion-card-header>
+
+      <ion-card-content class="cliente-card">
+        <ion-grid>
+          <ion-row>
+            <ion-col size="6" class="ion-text-start">
+              <ion-icon name="card" class="icono"></ion-icon>
+              <strong>Cuenta:</strong>
+              <span>{{ datos.codigo }}</span>
+            </ion-col>
+            <ion-col size="6" class="ion-text-start">
+              <ion-icon name="business" class="icono"></ion-icon>
+              <strong>RUC:</strong>
+              <span>{{ datos.ruc }}</span>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-card-content>
+
+      <ion-icon name="person-circle" class="icono-superior"></ion-icon>
+    </ion-card>
   </ion-list>
+
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button color="success" (click)="openEditClienteModal(0)">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
 
-<ion-fab vertical="bottom" horizontal="end" slot="fixed" class="custom-fab">
-  <ion-fab-button type="submit" (click)="openEditClienteModal(0)">
-    <ion-icon name="add"></ion-icon>
-  </ion-fab-button>
-</ion-fab>
-
-
 <ion-footer>
-  <ion-grid>
-    <ion-row>
-      <ion-col size="6" class="ion-text-center">
-        <ion-button  (click)="prevPage()" [disabled]="page === 1">
-          <ion-icon slot="icon-only" name="arrow-back"></ion-icon>
-        </ion-button>
-      </ion-col>
-      <ion-col size="6" class="ion-text-center">
-        <ion-button (click)="nextPage()">
-          <ion-icon slot="icon-only" name="arrow-forward"></ion-icon>
-        </ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+  <ion-toolbar color="primary">
+    <ion-grid>
+      <ion-row>
+        <ion-col size="6" class="ion-text-center">
+          <ion-button color="light" fill="solid" shape="round" (click)="prevPage()" [disabled]="page === 1">
+            <ion-icon name="arrow-back" slot="start"></ion-icon>
+            Anterior
+          </ion-button>
+        </ion-col>
+        <ion-col size="6" class="ion-text-center">
+          <ion-button color="light" fill="solid" shape="round" (click)="nextPage()">
+            Siguiente
+            <ion-icon name="arrow-forward" slot="end"></ion-icon>
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-toolbar>
 </ion-footer>
