--- a/src/app/paginas/clientes/edit-clientes/edit-clientes.page.html
+++ b/src/app/paginas/clientes/edit-clientes/edit-clientes.page.html
@@ -1,89 +1,81 @@
 <ion-header class="ion-padding">
   <ion-toolbar color="primary">
-    <ion-title class="ion-text-center">
-      {{titulo}}
-    </ion-title>
+    <ion-title class="ion-text-center">{{ titulo }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="form-content">
   <form>
     <ion-grid>
       <ion-row>
         <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item>
+          <ion-item class="custom-item">
             <ion-label position="floating">Nombre del Cliente</ion-label>
-            <ion-input type="text" [(ngModel)]="EditCliente.nombre" name="nombre"
-               required></ion-input>
+            <ion-input type="text" [(ngModel)]="EditCliente.nombre" name="nombre" required></ion-input>
           </ion-item>
         </ion-col>
 
         <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item>
+          <ion-item class="custom-item">
             <ion-label position="floating">Cédula de Identidad</ion-label>
-            <ion-input type="text" [(ngModel)]="EditCliente.cedula" name="cedula"
-              required pattern="^[0-9]*$" #cedula="ngModel"  ></ion-input>
+            <ion-input type="text" [(ngModel)]="EditCliente.cedula" name="cedula" required pattern="^[0-9]*$"></ion-input>
           </ion-item>
         </ion-col>
 
         <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item>
+          <ion-item class="custom-item">
             <ion-label position="floating">RUC</ion-label>
-            <ion-input type="text" [(ngModel)]="EditCliente.ruc" name="ruc"
-               required></ion-input>
+            <ion-input type="text" [(ngModel)]="EditCliente.ruc" name="ruc" required></ion-input>
           </ion-item>
         </ion-col>
 
         <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item>
+          <ion-item class="custom-item custom-textarea">
             <ion-label position="floating">Dirección</ion-label>
             <ion-buttons slot="end">
-              <ion-button>
-                <ion-icon slot="icon-only" color="danger" name="location"></ion-icon>
+              <ion-button fill="clear" color="danger">
+                <ion-icon slot="icon-only" name="location"></ion-icon>
               </ion-button>
             </ion-buttons>
-            <ion-textarea type="floating" [(ngModel)]="EditCliente.direccion" name="direccion"
-              ></ion-textarea>
+            <ion-textarea [(ngModel)]="EditCliente.direccion" name="direccion"></ion-textarea>
           </ion-item>
         </ion-col>
 
         <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item>
+          <ion-item class="custom-item">
             <ion-label position="floating">Celular</ion-label>
-            <ion-input type="text" [(ngModel)]="EditCliente.telefono" name="telefono" 
-              required>
-            </ion-input>
+            <ion-input type="text" [(ngModel)]="EditCliente.telefono" name="telefono" required></ion-input>
           </ion-item>
         </ion-col>
 
         <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item>
+          <ion-item class="custom-item">
             <ion-label position="floating">Mail</ion-label>
-            <ion-input type="text" [(ngModel)]="EditCliente.mail" name="mail"></ion-input>
+            <ion-input type="email" [(ngModel)]="EditCliente.mail" name="mail"></ion-input>
           </ion-item>
         </ion-col>
 
         <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item>
+          <ion-item class="custom-item">
             <ion-label position="floating">Fecha Nacimiento</ion-label>
             <ion-input type="date" [(ngModel)]="EditCliente.fechanacimiento" name="fechanacimiento"></ion-input>
           </ion-item>
         </ion-col>
 
         <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item>
+          <ion-item class="custom-item">
             <ion-label position="floating">Sexo</ion-label>
             <ion-select [(ngModel)]="EditCliente.sexo" name="sexo" [compareWith]="compareWithSexo">
-              <ion-select-option value=1>MASCULINO</ion-select-option>
-              <ion-select-option value=2>FEMENINO</ion-select-option>
+              <ion-select-option value="1">MASCULINO</ion-select-option>
+              <ion-select-option value="2">FEMENINO</ion-select-option>
             </ion-select>
           </ion-item>
         </ion-col>
 
         <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item>
+          <ion-item class="custom-item">
             <ion-label position="floating">Estado</ion-label>
-            <ion-select [(ngModel)]="EditCliente.estado" value="ACTIVO" name="estado" [compareWith]="compareWithEstado">
+            <ion-select [(ngModel)]="EditCliente.estado" name="estado" [compareWith]="compareWithEstado">
               <ion-select-option value="1">ACTIVO</ion-select-option>
               <ion-select-option value="0">INACTIVO</ion-select-option>
             </ion-select>
@@ -94,23 +86,20 @@
   </form>
 </ion-content>
 
-
-<ion-footer>
+<ion-footer class="custom-footer">
   <ion-grid>
     <ion-row>
       <ion-col size="6" class="ion-text-center">
-        <div>
-          <ion-button (click)="saveCliente()">
-          <ion-icon slot="icon-only" name="save"></ion-icon>
+        <ion-button expand="block" color="success" (click)="saveCliente()">
+          <ion-icon slot="start" name="save"></ion-icon>
+          Guardar
         </ion-button>
-        </div>
       </ion-col>
       <ion-col size="6" class="ion-text-center">
-        <div>
-          <ion-button (click)="dismiss()">
-            <ion-icon slot="icon-only" name="log-out"></ion-icon>
-          </ion-button>
-        </div>
+        <ion-button expand="block" color="medium" fill="outline" (click)="dismiss()">
+          <ion-icon slot="start" name="log-out"></ion-icon>
+          Cancelar
+        </ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
