--- a/src/app/paginas/productos/buscar-productos/buscar-productos/buscar-productos.page.html
+++ b/src/app/paginas/productos/buscar-productos/buscar-productos/buscar-productos.page.html
@@ -1,28 +1,47 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Buscar Producto</ion-title>
-    <ion-buttons slot="end">
-      <ion-button (click)="cancelar()">Cancelar</ion-button>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-button fill="clear" (click)="cancelar()">
+        <ion-icon name="arrow-back-outline" slot="icon-only"></ion-icon>
+      </ion-button>
     </ion-buttons>
+    <ion-title class="ion-text-center">📦 Lista de Productos</ion-title>
+  </ion-toolbar>
+
+  <ion-toolbar>
+    <ion-searchbar [(ngModel)]="textoBuscar" (ionInput)="buscarProducto($event)" debounce="300"
+      placeholder="🔍 Buscar por nombre o código" showCancelButton="focus">
+    </ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-searchbar
-    [(ngModel)]="textoBuscar"
-    (ionInput)="buscarProducto($event)"
-    placeholder="Buscar por código o nombre"
-  ></ion-searchbar>
+<ion-content class="ion-padding">
 
-  <ion-list>
-    <ion-item
-      *ngFor="let producto of productosFiltrados"
-      (click)="seleccionarProducto(producto)"
-    >
+  <!-- Mensaje si no hay resultados -->
+  <div class="ion-text-center" *ngIf="productosFiltrados.length === 0">
+    <ion-icon name="cube-outline" size="large" color="medium"></ion-icon>
+    <p style="color: gray;">No se encontraron productos.</p>
+  </div>
+
+  <!-- Lista de productos -->
+  <ion-list *ngIf="productosFiltrados.length > 0">
+    <ion-item *ngFor="let producto of productosFiltrados | filtro:textoBuscar:'nombre'" button lines="inset"
+      class="producto-item" (click)="seleccionarProducto(producto)">
+
+      <ion-avatar slot="start">
+        <ion-icon name="cube-outline" size="large" color="secondary"></ion-icon>
+      </ion-avatar>
+
       <ion-label>
-        <h2>{{ producto.codigo }} - {{ producto.nombre }}</h2>
-        <p>Precio: {{ producto.precio_maximo | number: '1.0-0' }}</p>
+        <h2 class="producto-nombre">{{ producto.nombre }}</h2>
+           🔢 {{ producto.codigo }} —
+        <span class="simbolo-guarani">₲</span>{{ producto.precio_maximo | number:'1.0-0' }}
+    
       </ion-label>
+
+
+      <ion-icon name="chevron-forward-outline" slot="end" color="medium"></ion-icon>
     </ion-item>
   </ion-list>
+
 </ion-content>
