--- a/src/app/paginas/menu/menu.page.html
+++ b/src/app/paginas/menu/menu.page.html
@@ -1,17 +1,27 @@
 <ion-header>
-  <div logo-container>
-    <img src="../../../assets/img/logo.png" class="logo" />
+  <div class="header-logo">
+    <img src="../../../assets/img/logo.png" class="logo-full" />
   </div>
+  
+  <div class="divider-line"></div>
+  
   <ion-toolbar color="primary">
-      <ion-title class="custom-title" class="ion-text-center">Menú Principal</ion-title>
+    <ion-title class=".toolbar-gradient">Menú Principal</ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-content>
-  <ion-list>
-    <ion-item *ngFor="let c of componentes" [routerLink]="c.redirectTo" detail>
-      <ion-icon slot="start" [name]="c.icon"  [class]="getIconClass(c.name)"></ion-icon>
-      <ion-label>{{c.name}}</ion-label>
-    </ion-item>      
-  </ion-list>
 
+<ion-content class="ion-padding">
+  <ion-list lines="none" class="menu-list">
+    <ion-card *ngFor="let item of componentes" class="menu-card" (click)="openModal(item.component)">
+      <ion-item lines="none" class="menu-item">
+        <ion-icon [name]="item.icon" slot="start" [style.color]="item.color" class="menu-icon"></ion-icon>
+        <ion-label class="menu-label">{{ item.name }}</ion-label>
+      </ion-item>
+    </ion-card>
+  </ion-list>
 </ion-content>
+
+<ion-footer class="footer-dismiss">
+  <ion-button expand="block" color="medium" (click)="dismiss()">Salir</ion-button>
+  
+</ion-footer>
