--- a/src/app/paginas/productos/edit-productos/edit-productos/edit-productos.page.html
+++ b/src/app/paginas/productos/edit-productos/edit-productos/edit-productos.page.html
@@ -1,47 +1,40 @@
 <ion-header class="ion-padding">
   <ion-toolbar color="primary">
-    <ion-title class="ion-text-center">
-      {{titulo}}
-    </ion-title>
+    <ion-title class="ion-text-center">{{ titulo }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="form-content">
   <form>
     <ion-grid>
       <ion-row>
         <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item>
+          <ion-item class="custom-item">
             <ion-label position="floating">Nombre del Producto</ion-label>
-            <ion-input type="text" [(ngModel)]="EditProducto.nombre" name="nombre"
-               required></ion-input>
+            <ion-input type="text" [(ngModel)]="EditProducto.nombre" name="nombre" required></ion-input>
           </ion-item>
         </ion-col>
 
         <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item>
-            <ion-label position="floating">Costo</ion-label>
-
-
-            <ion-input
-            type="text"
-            [(ngModel)]="EditProducto.costo" name="costo"
-            (ionInput)="actualizarValor($event, 'costo')"></ion-input>
+          <ion-item class="custom-item">
+            <ion-input type="text" [value]="formatCurrency(EditProducto.costo)"
+              (ionInput)="updateFormattedInput($event, 'costo')" inputmode="numeric">
+            </ion-input>
           </ion-item>
         </ion-col>
 
         <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item>
-            <ion-label position="floating">Precio</ion-label>
-            <ion-input type="number" [(ngModel)]="EditProducto.precio_maximo" name="precio_maximo"
-              required pattern="^[0-9]*$" #cedula="ngModel"  ></ion-input>
+          <ion-item class="custom-item">
+            <ion-input type="text" [value]="formatCurrency(EditProducto.precio_maximo)"
+              (ionInput)="updateFormattedInput($event, 'precio_maximo')" inputmode="numeric">
+            </ion-input>
           </ion-item>
         </ion-col>
 
         <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item>
+          <ion-item class="custom-item">
             <ion-label position="floating">Estado</ion-label>
-            <ion-select [(ngModel)]="EditProducto.estado" value="ACTIVO" name="estado" [compareWith]="compareWithEstado">
+            <ion-select [(ngModel)]="EditProducto.estado" name="estado" [compareWith]="compareWithEstado">
               <ion-select-option value="1">ACTIVO</ion-select-option>
               <ion-select-option value="0">INACTIVO</ion-select-option>
             </ion-select>
@@ -52,23 +45,20 @@
   </form>
 </ion-content>
 
-
-<ion-footer>
+<ion-footer class="custom-footer">
   <ion-grid>
     <ion-row>
       <ion-col size="6" class="ion-text-center">
-        <div>
-          <ion-button (click)="saveProducto()">
-          <ion-icon slot="icon-only" name="save"></ion-icon>
+        <ion-button expand="block" color="success" (click)="saveProducto()">
+          <ion-icon slot="start" name="save"></ion-icon>
+          Guardar
         </ion-button>
-        </div>
       </ion-col>
       <ion-col size="6" class="ion-text-center">
-        <div>
-          <ion-button (click)="dismiss()">
-            <ion-icon slot="icon-only" name="log-out"></ion-icon>
-          </ion-button>
-        </div>
+        <ion-button expand="block" color="medium" fill="outline" (click)="dismiss()">
+          <ion-icon slot="start" name="log-out"></ion-icon>
+          Cancelar
+        </ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
