--- a/src/app/paginas/productos/lista-productos/productos/productos.page.html
+++ b/src/app/paginas/productos/lista-productos/productos/productos.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-button fill="clear" (click)="goBack()">
+      <ion-button fill="clear" (click)="dismiss()">
         <ion-icon name="arrow-back" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
