--- a/src/app/paginas/ventas/lista-ventas/lista-ventas.page.html
+++ b/src/app/paginas/ventas/lista-ventas/lista-ventas.page.html
@@ -37,7 +37,7 @@
 
   <!-- Mensaje si no hay pedidos -->
   <div class="ion-text-center" *ngIf="totalpedido == 0">
-    <h3 style="color: #666; font-weight: 500;">📭 Sin Pedidos</h3>
+    <h3 style="color: #666; font-weight: 500;">📭 Sin Ventas</h3>
   </div>
 
   <!-- Lista de pedidos -->
