modulo de facturacion terminado

--- a/android/app/src/main/res/xml/network_security_config.xml
+++ b/android/app/src/main/res/xml/network_security_config.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
   <base-config cleartextTrafficPermitted="false">
     <trust-anchors>
@@ -7,6 +7,6 @@
   </base-config>
 
   <domain-config cleartextTrafficPermitted="true">
-    <domain includeSubdomains="true">http://192.168.0.100</domain>
+    <domain includeSubdomains="true">192.168.0.100</domain>
   </domain-config>
 </network-security-config>
