--- a/src/app/paginas/ventas/detalle-venta/detalle-venta.page.scss
+++ b/src/app/paginas/ventas/detalle-venta/detalle-venta.page.scss
@@ -21,3 +21,20 @@ h2 {
   font-size: 1rem;
 }
 
+
+
+.alert-personalizado {
+  --backdrop-opacity: 0.25;
+  --background: #ffffff;
+  --border-radius: 12px;
+  font-family: 'Segoe UI', sans-serif;
+}
+
+.alert-button-ok {
+  color: #2dd36f; // verde Ionic
+  font-weight: bold;
+}
+
+.alert-button-cancel {
+  color: #eb445a; // rojo Ionic
+}
